# hough-recognition

./: .gitignore  Makefile.am  README.md  config.h  configure.ac
res/: app.glade
src/: Makefile.am  hough-recog.c  hough-recog.h  imgproc.c  imgproc.h  interface.c  interface.h  main.c
